--- a/BinarySearch/34. FindFirstAndLastPositionOfElementInSortedArray.md
+++ b/BinarySearch/34. FindFirstAndLastPositionOfElementInSortedArray.md
@@ -8,54 +8,42 @@ If target is not found in the array, return [-1, -1].
 You must write an algorithm with O(log n) runtime complexity.
 ### solution
 ```
-class Solution(object):
-    def searchRange(self, nums, target):
-        """
-        :type nums: List[int]
-        :type target: int
-        :rtype: List[int]
-        """
-        
+class Solution:
+    def searchRange(self, nums: List[int], target: int) -> List[int]:
         x = self.searchFirst(nums,target)
         y = self.searchLast(nums,target)
         
         return [x,y]
-        
-        
-    def searchFirst(self, nums,target):
+    
+    def searchFirst(self,nums,target):
         left = 0
         right = len(nums)-1
-        res = -1
-        
-        while (left<= right):
+        res =  -1
+        while( left <= right):
             mid = (right - left)//2 + left
             if nums[mid] < target:
-                left = mid +1
-            if nums[mid]> target:
-                right = mid -1
-            
+                left = mid + 1
+            if nums[mid] > target:
+                right = mid - 1
             elif target == nums[mid]:
                 res = mid
-                right = mid - 1
-        
+                right = mid -1
         return res
     
-    def searchLast(self, nums,target):
+    def searchLast(self,nums,target):
         left = 0
         right = len(nums)-1
         res = -1
-        
-        while (left<= right):
+        while (left <= right):
             mid = (right - left)//2 + left
-            if nums[mid] < target:
+            if nums[mid]< target:
                 left = mid +1
-            if nums[mid]> target:
+            if nums[mid]>target:
                 right = mid -1
-            
-            elif target == nums[mid]:
+                
+            elif nums[mid]== target:
                 res = mid
                 left = mid + 1
-        
         return res
 
 ```
