--- a/Two Pointers/15. 3Sum.md
+++ b/Two Pointers/15. 3Sum.md
@@ -5,6 +5,7 @@ Notice that the solution set must not contain duplicate triplets.
 
 # solution #
 - how to reduce the duplicate solution?
+- why only need to shift one pointer?
 
 ```
 class Solution:
