--- a/Tree/DFS/235. Lowest Common Ancestor of a Binary Search Tree.md
+++ b/Tree/DFS/235. Lowest Common Ancestor of a Binary Search Tree.md
@@ -1,6 +1,6 @@
 # question
 
-##solution
+##solution1
 根据binary search tree 的定义，可以通过比较值的大小来得到LCA
 
 ```Python
@@ -15,5 +15,24 @@ class Solution:
                 current = current.left
             else:
                 return current
+```
+
+##solution2
+
+```python
+ class Solution:
+    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':
+        if root is None or root == p or root == q:
+            return root
+        l = self.lowestCommonAncesto(root.left,p,q)
+        r = self.lowestCommonAncesto(root.right,p,q)
+        
+        if l and r:
+            return root
+        
+        if l:
+            return l
+        else:
+            return r
 ```
 
