--- a/Tree/DFS/230. Kth Smallest Element in a BST.md
+++ b/Tree/DFS/230. Kth Smallest Element in a BST.md
@@ -1,6 +1,7 @@
 # question
-![img_1.png](img_1.png)
-![img.png](img.png)
+![img_1.png](https://github.com/WeiruSun/Leetcode/blob/66476c3c4bcea2263c9713a7e9a7039676903ffd/Tree/DFS/img.png)
+![img.png](Tree/DFS/img_1.png)
+
  ```
  class Solution:
     def kthSmallest(self, root: Optional[TreeNode], k: int) -> int:
