--- a/Tree/DFS/230. Kth Smallest Element in a BST.md
+++ b/Tree/DFS/230. Kth Smallest Element in a BST.md
@@ -1,7 +1,6 @@
 # question
-![img_1.png](https://github.com/WeiruSun/Leetcode/blob/66476c3c4bcea2263c9713a7e9a7039676903ffd/Tree/DFS/img.png)
-![img.png](https://github.com/WeiruSun/Leetcode/blob/22ad21e4670232b881313b3279814656404eda9f/Tree/DFS/img.png)
-
+![img_1.png](img_1.png)
+![img.png](img.png)
  ```
  class Solution:
     def kthSmallest(self, root: Optional[TreeNode], k: int) -> int:
