--- a/Two Pointers/Floyd's Tortoise and Hare/202. Happy Number.md
+++ b/Two Pointers/Floyd's Tortoise and Hare/202. Happy Number.md
@@ -21,3 +21,6 @@ class Solution:
         return total_sum
 ```
 
+**Time complexity : O(243⋅3+logn+loglogn+logloglogn)... = O(logn).**
+
+Finding the next value for a given number has a cost of O(logn) because we are processing each digit in the number, and the number of digits in a number is given by logn.
