--- a/DFS/DFS in tree/230. Kth Smallest Element in a BST.md
+++ b/DFS/DFS in tree/230. Kth Smallest Element in a BST.md
@@ -1,6 +1,6 @@
 # question
-![img_1.png](img_1.png)
-![img.png](img.png)
+![img_1.png](../img_1.png)
+![img.png](../img.png)
  ```
  class Solution:
     def kthSmallest(self, root: Optional[TreeNode], k: int) -> int:
