--- a/DynamicProgramming/53. Maximum Subarray.md
+++ b/DynamicProgramming/53. Maximum Subarray.md
@@ -7,8 +7,15 @@
         currS = nums[0]
         
         for num in nums[1:]:
+            #start from  current number || adding current number
            currS = max(num,currS + num)
+            #compare 
            maxS = max(currS,maxS)
         return maxS
 ```
+
+
+
+
+
 
