--- a/interval/435. Non-overlapping Intervals.md
+++ b/interval/435. Non-overlapping Intervals.md
@@ -13,7 +13,7 @@ class Solution:
         for start,end in intervals[1:]:
             # not overlapping
             if start >= tail:
-                tail = max(tail,end)
+                tail = end
             # overlapping
             else:
                 tail = min(tail,end)
