--- a/Two Pointers/11. Container With Most Water.md
+++ b/Two Pointers/11. Container With Most Water.md
@@ -1,5 +1,21 @@
 # question
 
- ```
+ ```Python
+ class Solution:
+    def maxArea(self, height: List[int]) -> int:
+        left = 0
+        right = len(height)-1
+        res = 0
+
+        while left < right :
+            current = (right - left)* min(height[left],height[right])
+            res = max(res,current)
+            if height[left] < height[right]:
+                left += 1
+            elif height[left] >= height[right]:
+                right -= 1
+            
+        return res
+#time complexity : O(n)
 ```
 
