--- a/Two Pointers/15. 3Sum.md
+++ b/Two Pointers/15. 3Sum.md
@@ -7,7 +7,7 @@ Notice that the solution set must not contain duplicate triplets.
 - how to reduce the duplicate solution?
 - why only need to shift one pointer?
 
-```
+```Python
 class Solution:
     def threeSum(self, nums: List[int]) -> List[List[int]]:
         nums.sort()
@@ -31,5 +31,7 @@ class Solution:
                         left += 1
         return res
 
+        #time complexity: O(nlog(n)) #sort + O(n**2) #one loop to get first value and second loop to get two sum. 
+        #O(n**2) 
 ```
 
