--- a/DynamicProgramming/70. Climbing Stairs.md
+++ b/DynamicProgramming/70. Climbing Stairs.md
@@ -2,6 +2,32 @@
 
 The variation of fibonacci
 
+
+
+solution 1: DFS 
+time complexity: 2**n
+```python
+
+
+```
+![409213fd8a724e38a1c4713801745f4.png](..%2F..%2F..%2F..%2FAppData%2FLocal%2FTemp%2FWeChat%20Files%2F409213fd8a724e38a1c4713801745f4.png)
+we can store the repeat result in DP [memorization] => O(n)
+![506067f3555e6ec0f4e7f725027b50b.png](..%2F..%2F..%2F..%2FAppData%2FLocal%2FTemp%2FWeChat%20Files%2F506067f3555e6ec0f4e7f725027b50b.png)
+And we can store the repeated result in two variable:
+![395006df42761e0845b42d52d4d74f9.png](..%2F..%2F..%2F..%2FAppData%2FLocal%2FTemp%2FWeChat%20Files%2F395006df42761e0845b42d52d4d74f9.png)
+
+solution 2: DP
+```python
+one,two = 1,1,
+
+for i in range(n-1):
+    temp = one
+    one = one + two
+    two = temp
+return one
+```
+
+solution 2.1: DP
 ```Python
 class Solution:
     def climbStairs(self, n: int) -> int:
