--- a/DynamicProgramming/746. Min Cost Climbing Stairs.md
+++ b/DynamicProgramming/746. Min Cost Climbing Stairs.md
@@ -1,10 +1,18 @@
 # question
 
+## brute force solution 
+By using decision tree, the height = n, and we can have two branches for every single node, so time complexity would be 2**n
+
+
+## dp : bottom-up solution
+solve the problem right to left. To arrive index x, what is the minimum cost. 
+
+time complexity : O(n)
  ```Python
  class Solution:
     def minCostClimbingStairs(self, cost: List[int]) -> int:
         cost.append(0)
-
+        #update the cost of each position to the minimum cost of getting to the destination
         for i in range(len(cost)-3,-1,-1):
             cost[i] += min(cost[i+1],cost[i+2])
 
