--- a/BinarySearch/4. Median of Two Sorted Arrays.md
+++ b/BinarySearch/4. Median of Two Sorted Arrays.md
@@ -2,6 +2,40 @@
 Given two sorted arrays nums1 and nums2 of size m and n respectively, return the median of the two sorted arrays.
 
 The overall run time complexity should be O(log (m+n)).
- ```
+
+## solution1 - Brute Force: TLE
+ ```Python
+ class Solution:
+    def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:
+        # brute force: merge two array & find the median
+        i,j = 0,0
+        merge = []
+
+        # O(min(m,n))
+        while i < len(nums1) and j < len(nums2):
+            if nums1[i] < nums2[j]:
+                merge.append(nums1[i])
+                i +=1
+            else:
+                merge.append(nums2[j])
+        
+        #append any remaining elements from array
+        if i < len(nums1):
+            merge.append(nums1[i:])
+        
+        if j < len(nums2):
+            merge.append(nums2[j:])
+
+        #find the median
+        n = len(merge)
+        if n % 2 == 0:
+            return(merge[n//2-1]+ merge[n//2])/2
+        else:
+            return merge[n//2]
+```
+
+## solution2 - BS
+```python
+
 ```
 
