--- a/DFS/DFS in tree/226. Invert Binary Tree.md
+++ b/DFS/DFS in tree/226. Invert Binary Tree.md
@@ -1,5 +1,20 @@
 # question
 
-```
+```Python
+class Solution(object):
+    def invertTree(self, root):
+        """
+        :type root: TreeNode
+        :rtype: TreeNode
+        """
+        if not root:
+            return None
+        temp = root.left
+        root.left = root.right
+        root.right = temp
+
+        self.invertTree(root.left)
+        self.invertTree(root.right)
+        return root
 ```
 
