--- a/Linear/Arrays&Hashing/1. Two Sum.md
+++ b/Linear/Arrays&Hashing/1. Two Sum.md
@@ -16,8 +16,24 @@ class Solution:
             if diff in indexSet:
                 return [indexSet[diff],i]
             indexSet[n] = i
-
 ```
 
+
+```Java
+class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        HashMap<Integer,Integer> temp = new HashMap<>();
+
+        for(int i = 0; i < nums.length; i++){
+            int complement = target - nums[i];
+            if(temp.containsKey(complement)){
+                return new int[] {temp.get(complement),i};
+            }
+            temp.put(nums[i],i);
+        }
+        return null;
+    }
+}
+```
 
 
