--- a/Linear/Arrays&Hashing/205. Isomorphic Strings.md
+++ b/Linear/Arrays&Hashing/205. Isomorphic Strings.md
@@ -1,6 +1,6 @@
 # question
 
-```
+```Python
 class Solution:
     def isIsomorphic(self, s: str, t: str) -> bool:
         mapping_s_t = {}
@@ -13,5 +13,37 @@ class Solution:
             elif mapping_s_t.get(c1) != c2 or mapping_t_s.get(c2) != c1:
                 return False
         return True
+```
+
+```Java
+class Solution {
+    public boolean isIsomorphic(String s, String t) {
+        // mapping dictionary
+        int[] mappingStoT = new int[256];
+        int[] mappingTtoS = new int[256];
+        //fill the dictionary with default value
+        Arrays.fill(mappingStoT,-1);
+        Arrays.fill(mappingTtoS,-1);
+
+        for(int i = 0; i < s.length(); i++){
+            char c1 = s.charAt(i);
+            char c2 = t.charAt(i);
+
+            if(mappingStoT[c1] == -1 && mappingTtoS[c2] == -1){
+                mappingStoT[c1] = c2;
+                mappingTtoS[c2] = c1;
+            }
+        
+
+            else if(mappingStoT[c1] != c2 || mappingTtoS[c2] != c1){
+                return false;
+            }
+        }
+
+        return true;
+
+    }
+    
+}
 ```
 
