--- a/interval/252. Meeting Rooms.md
+++ b/interval/252. Meeting Rooms.md
@@ -1,6 +1,6 @@
 # question
 
- ```
+ ```Python
  class Solution:
     def canAttendMeetings(self, intervals: List[List[int]]) -> bool:
         
@@ -20,5 +20,22 @@
         return True
         
         #time complexity : O(nlog(n))
+```
+
+```Java
+class Solution {
+    public boolean canAttendMeetings(int[][] intervals) {
+        //sort the arrat
+        Arrays.sort(intervals,(a,b) -> Integer.compare(a[0],b[0]));
+
+        for(int i = 0; i < intervals.length - 1; i++){
+            if(intervals[i][1]> intervals[i+1][0]){
+                return false;
+            }
+        }
+
+        return true;
+    }
+}
 ```
 
