--- a/DFS/DFS in tree/1448. Count Good Nodes in Binary Tree.md
+++ b/DFS/DFS in tree/1448. Count Good Nodes in Binary Tree.md
@@ -20,3 +20,45 @@ class Solution:
 
 ```
 
+
+```Java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    public int goodNodes(TreeNode root) {
+        return DFS(root, Integer.MIN_VALUE);
+    }
+
+    private int DFS(TreeNode root, int max){
+        if(root == null){
+            return 0;
+        }
+
+        int count = 0;
+        if(root.val >= max){
+            count ++;
+            max = root.val;
+        }
+        count += DFS(root.left,max);
+        count += DFS(root.right,max);
+
+        return count;
+
+
+    }
+}
+```
+
