--- a/Linear/Arrays&Hashing/347. Top K Frequent Elements.md
+++ b/Linear/Arrays&Hashing/347. Top K Frequent Elements.md
@@ -48,3 +48,35 @@ class Solution:
                 if len(res) == k:
                     return res 
 ```
+```Java
+class Solution {
+    public int[] topKFrequent(int[] nums, int k) {
+        //corner case
+        if(k == nums.length){
+            return nums;
+        }
+
+        //map: frequence as value, number as key - Building the HashMap: O(N) time
+        Map<Integer,Integer> freq = new HashMap<>();
+
+        for(int num:nums){
+            freq.put(num,freq.getOrDefault(num,0)+1);
+        } 
+
+        //priority queue to maintain maxHeap -Building the Heap: O(D) time
+        PriorityQueue <Integer> maxHeap = new PriorityQueue<>((a,b)->(freq.get(b)-freq.get(a)));
+        for(int key: freq.keySet()){
+            maxHeap.add(key);
+        }
+
+        int [] res = new int[k];
+
+        for(int i =0; i < k; i++){
+            res[i] = maxHeap.poll();
+        }
+
+        // Poll K distinct elements from the Heap: O(K log D) time
+        return res;
+    }
+}
+```
