--- a/Linear/Arrays&Hashing/242. Valid Anagram.md
+++ b/Linear/Arrays&Hashing/242. Valid Anagram.md
@@ -20,4 +20,21 @@ class Solution:
 
 ```
 
-solution:
+# java solution 1 - sort:
+```Java
+class Solution {
+    public boolean isAnagram(String s, String t) {
+        if(s.length() != t.length()){
+            return false;
+        }
+
+        //sort two string and see if they are equal
+        char[] str1 = s.toCharArray();
+        char[] str2 = t.toCharArray();
+        Arrays.sort(str1);
+        Arrays.sort(str2);
+
+        return Arrays.equals(str1,str2);
+    }
+}
+```
