--- a/interval/253. Meeting Rooms II.md
+++ b/interval/253. Meeting Rooms II.md
@@ -1,6 +1,7 @@
 # question
 
-```Python
+# solution 1 : sort start and end time O(nlogn) + n
+```Python 
 class Solution:
     def minMeetingRooms(self, intervals: List[List[int]]) -> int:
         res = 0
@@ -19,5 +20,29 @@ class Solution:
                 count -= 1
             res = max(res,count)
         return res
+```
+
+# solution 2 : with heap, O(nlogn)
+```python
+class Solution:
+    def minMeetingRooms(self, intervals: List[List[int]]) -> int:
+        rooms = []
+        # sort the intervals O(Nlog⁡N)
+        intervals.sort(key = lambda i:i[0])
+        
+        heapq.heappush(rooms,intervals[0][1])
+        # 
+        for i in intervals[1:]:
+            # If the room due to free up the earliest is free, assign that room to this meeting.
+            # extract-min operation on a heap takes O(log⁡N)
+            # In the worst case we will have N extract-min operations as well
+            if rooms[0] <= i[0]:
+                heapq.heappop(rooms)
+            # If a new room is to be assigned, then also we add to the heap
+            heapq.heappush(rooms,i[1])
+
+        return len(rooms)
+
+
 ```
 
