--- a/interval/253. Meeting Rooms II.md
+++ b/interval/253. Meeting Rooms II.md
@@ -27,7 +27,7 @@ class Solution:
 class Solution:
     def minMeetingRooms(self, intervals: List[List[int]]) -> int:
         rooms = []
-        # sort the intervals O(Nlog⁡N)
+        # sort the intervals O(NlogN)
         intervals.sort(key = lambda i:i[0])
         
         heapq.heappush(rooms,intervals[0][1])
