--- a/Code/Two Pointers/LeftAndRight/167. Two Sum II - Input Array Is Sorted.md
+++ b/Code/Two Pointers/LeftAndRight/167. Two Sum II - Input Array Is Sorted.md
@@ -4,7 +4,7 @@
 
 #solution
 - compare with the binary search : there would be exact one solution contains two numbers' index
-```
+```Python
 class Solution:
     def twoSum(self, numbers: List[int], target: int) -> List[int]:
         left = 0
@@ -12,7 +12,7 @@ class Solution:
         
         while left < right:
             current = numbers[left] +numbers[right]
-
+        
             if current >target:
                 right -= 1
             
